# realtime-audio-receptionist

./: main.py  prompts.py  pyproject.toml
