[project]
name = "realtime-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "numpy>=2.2.4",
    "openai>=1.69.0",
    "pyaudio>=0.2.14",
    "soundfile>=0.13.1",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
]
